objects/LayoutTest__c.object
<CustomObject>
    <fields>
        <fullName>LayoutTest1__c</fullName>
        <label>LayoutTest1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LayoutTest2__c</fullName>
        <label>LayoutTest2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LayoutTest3__c</fullName>
        <label>LayoutTest3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>LayoutTest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LayoutTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LayoutTests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>